add setting for first work day to have ability to numerate all your work days